--- a/Titanic_Servival_Prediction_TASK1.ipynb
+++ b/Titanic_Servival_Prediction_TASK1.ipynb
@@ -288,12 +288,12 @@
         "test_data.head()\n"
       ],
       "metadata": {
-        "id": "hWgOtwNmtChz",
-        "outputId": "ffbc1b4d-d29a-414c-dc66-a266e58977e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 224
-        }
+        },
+        "id": "hWgOtwNmtChz",
+        "outputId": "ffbc1b4d-d29a-414c-dc66-a266e58977e5"
       },
       "execution_count": 51,
       "outputs": [
@@ -560,12 +560,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "BJivLL1ywJNZ",
-        "outputId": "ebfcfd20-013a-46b3-da11-18e0d6a1bb85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "BJivLL1ywJNZ",
+        "outputId": "ebfcfd20-013a-46b3-da11-18e0d6a1bb85"
       },
       "execution_count": 53,
       "outputs": [
@@ -1182,12 +1182,12 @@
         "test_data.head()"
       ],
       "metadata": {
-        "id": "eRXdJNPCxBre",
-        "outputId": "b475a1f6-8044-4050-9600-6e8316773432",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "eRXdJNPCxBre",
+        "outputId": "b475a1f6-8044-4050-9600-6e8316773432"
       },
       "execution_count": 56,
       "outputs": [
@@ -1662,10 +1662,36 @@
         "Train_pred"
       ],
       "metadata": {
-        "id": "FNGQf2T11s07"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FNGQf2T11s07",
+        "outputId": "e657eb0b-b564-4a84-9cef-e7f708aebdf3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0,\n",
+              "       1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1,\n",
+              "       1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0,\n",
+              "       1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0,\n",
+              "       0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0,\n",
+              "       1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+              "       0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0,\n",
+              "       0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0,\n",
+              "       1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1,\n",
+              "       1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0,\n",
+              "       0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1,\n",
+              "       0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 136
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1674,10 +1700,22 @@
         "print(\"Training Score: \", accuracy)"
       ],
       "metadata": {
-        "id": "7pPDOJuRJs7q"
+        "id": "7pPDOJuRJs7q",
+        "outputId": "94cabc50-877b-4c29-a618-11b0fe366a35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Score:  1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1687,10 +1725,30 @@
         "print(test_pred)\n"
       ],
       "metadata": {
-        "id": "e2dWn8hkJ6uQ"
+        "id": "e2dWn8hkJ6uQ",
+        "outputId": "fae1d3d6-8b0c-4d45-98f0-8b89a5ad1c89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 0 0 1 0 1 0 1 0 0 1 0 1 1 0 0 1 1 0 0 0 1 0 1 0 0 0 0 1 0 0 1 0 0 0 1\n",
+            " 1 0 0 1 1 0 0 1 1 0 0 0 1 0 0 0 1 0 1 0 0 1 1 0 1 0 1 0 1 0 1 0 0 0 1 1 0\n",
+            " 1 1 0 0 1 0 1 0 1 0 0 1 0 0 0 0 1 1 1 0 1 0 1 1 1 0 1 0 0 0 0 0 0 0 0 0 1\n",
+            " 0 1 1 0 0 0 0 0 0 1 1 0 0 1 1 0 1 0 1 0 1 0 0 1 0 0 0 1 1 0 1 1 0 0 1 1 0\n",
+            " 1 0 0 0 0 0 0 0 0 1 0 0 0 1 0 1 0 1 0 0 0 1 1 0 0 1 1 0 1 0 1 0 0 0 0 1 0\n",
+            " 0 0 0 0 1 1 1 1 0 0 1 0 1 1 0 0 0 0 0 1 0 0 0 1 1 0 0 0 1 1 0 0 0 0 1 0 1\n",
+            " 1 0 0 1 0 0 0 1 0 0 0 0 0 1 0 0 0 1 0 0 1 1 1 0 0 0 0 0 0 0 0 1 0 1 0 0 0\n",
+            " 1 0 1 0 0 0 0 0 0 0 1 1 0 1 0 1 1 0 0 0 1 0 1 1 0 1 1 0 1 1 1 0 0 1 0 0 1\n",
+            " 1 1 0 0 0 0 1 1 0 0 0 0 0 1 0 0 0 1 0 1 0 0 1 0 1 0 0 0 0 0 1 1 1 1 0]\n"
+          ]
+        }
+      ]
     }
   ]
 }
