--- a/Iris_flower_classification.ipynb
+++ b/Iris_flower_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgWyzgYDqFerXVeklhmRP2",
+      "authorship_tag": "ABX9TyOn4sjzEC/PBTsl0LjkiiH8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,16 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 153,
       "metadata": {
         "id": "clRGEiM-8XaG"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score\n",
         "\n",
         "iris=pd.read_csv(\"Iris.csv\")"
       ]
@@ -55,9 +53,9 @@
           "height": 206
         },
         "id": "QSXEuS1lGzIy",
-        "outputId": "9be147c8-7b43-44fa-bfc9-bb8557e94bff"
+        "outputId": "e58717d7-4883-47b8-f6c0-09ff1a4cf7c7"
       },
-      "execution_count": 130,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -73,7 +71,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-8cfc6c14-1503-4eb6-bea1-40abbc1bdb0a\">\n",
+              "  <div id=\"df-d45d0f75-ff0e-4b0a-be99-2dc0cafa11ad\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -150,7 +148,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8cfc6c14-1503-4eb6-bea1-40abbc1bdb0a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d45d0f75-ff0e-4b0a-be99-2dc0cafa11ad')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -163,8 +161,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-95316aa0-31d2-47b4-8a3c-8ad3b0c3259d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-95316aa0-31d2-47b4-8a3c-8ad3b0c3259d')\"\n",
+              "    <div id=\"df-b39f260d-1db4-4800-a3c0-09d235b377e4\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b39f260d-1db4-4800-a3c0-09d235b377e4')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -221,7 +219,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-95316aa0-31d2-47b4-8a3c-8ad3b0c3259d button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-b39f260d-1db4-4800-a3c0-09d235b377e4 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -268,12 +266,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8cfc6c14-1503-4eb6-bea1-40abbc1bdb0a button.colab-df-convert');\n",
+              "          document.querySelector('#df-d45d0f75-ff0e-4b0a-be99-2dc0cafa11ad button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8cfc6c14-1503-4eb6-bea1-40abbc1bdb0a');\n",
+              "          const element = document.querySelector('#df-d45d0f75-ff0e-4b0a-be99-2dc0cafa11ad');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -295,7 +293,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 130
+          "execution_count": 154
         }
       ]
     },
@@ -392,23 +390,16 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**Converting categorical varibales into numbers**"
-      ],
-      "metadata": {
-        "id": "Z59sTlCZdWgN"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "iris['species']=iris['species'].map({'Iris-setosa':0,'Iris-versicolor':1,'Iris-virginica':2})\n"
+        "#Converting categorical varibales into numbers\n",
+        "\n",
+        "iris['species']=iris['species'].map({'Iris-setosa':0,'Iris-versicolor':1,'Iris-virginica':2})"
       ],
       "metadata": {
         "id": "_XQucbe9dUuG"
       },
-      "execution_count": 131,
+      "execution_count": 155,
       "outputs": []
     },
     {
@@ -421,19 +412,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zU6HPKveekSi",
-        "outputId": "0fa7db11-01be-4afe-c56a-37088df444dc"
+        "outputId": "29d969a0-09df-4bcc-e7a9-38da2e583354"
       },
-      "execution_count": 128,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Series([], Name: species, dtype: int64)"
+              "0    50\n",
+              "1    50\n",
+              "2    50\n",
+              "Name: species, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 128
+          "execution_count": 156
         }
       ]
     },
@@ -450,9 +444,9 @@
           "height": 424
         },
         "id": "xKo1LMRSMFz1",
-        "outputId": "db53f5f1-0f6d-43f6-8619-bfea04b9a2ec"
+        "outputId": "99085a9f-49c3-4a4a-b3bb-c06b2885ebca"
       },
-      "execution_count": 132,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +470,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-41c244eb-a70e-4b1a-a9c2-3af31704952e\">\n",
+              "  <div id=\"df-c0ac4ce2-88f3-468f-9c6d-6a0d862adc55\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -584,7 +578,7 @@
               "</table>\n",
               "<p>150 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-41c244eb-a70e-4b1a-a9c2-3af31704952e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c0ac4ce2-88f3-468f-9c6d-6a0d862adc55')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -597,8 +591,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-59fb28b2-daaf-48d1-9a9f-59af5f431d81\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-59fb28b2-daaf-48d1-9a9f-59af5f431d81')\"\n",
+              "    <div id=\"df-dd677389-cba0-46eb-841d-7d45a3250197\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dd677389-cba0-46eb-841d-7d45a3250197')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -655,7 +649,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-59fb28b2-daaf-48d1-9a9f-59af5f431d81 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-dd677389-cba0-46eb-841d-7d45a3250197 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -702,12 +696,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-41c244eb-a70e-4b1a-a9c2-3af31704952e button.colab-df-convert');\n",
+              "          document.querySelector('#df-c0ac4ce2-88f3-468f-9c6d-6a0d862adc55 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-41c244eb-a70e-4b1a-a9c2-3af31704952e');\n",
+              "          const element = document.querySelector('#df-c0ac4ce2-88f3-468f-9c6d-6a0d862adc55');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -729,7 +723,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 132
+          "execution_count": 157
         }
       ]
     },
@@ -743,9 +737,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GGVlgvArRcs-",
-        "outputId": "0e699157-4b0c-4277-c30f-23d5f75b1df5"
+        "outputId": "3adfdbb2-77d7-412f-eb4c-746557410c79"
       },
-      "execution_count": 133,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -766,7 +760,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 133
+          "execution_count": 158
         }
       ]
     },
@@ -777,29 +771,10 @@
         "model.fit(x,y)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 75
-        },
-        "id": "f-zsYKJ4TEZR",
-        "outputId": "13675e79-d00d-4471-e88e-ef819d0b0437"
+        "id": "f-zsYKJ4TEZR"
       },
-      "execution_count": 134,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LogisticRegression()"
-            ],
-            "text/html": [
-              "<style>#sk-container-id-8 {color: black;background-color: white;}#sk-container-id-8 pre{padding: 0;}#sk-container-id-8 div.sk-toggleable {background-color: white;}#sk-container-id-8 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-8 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-8 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-8 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-8 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-8 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-8 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-8 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-8 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-8 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-8 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-8 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-8 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-8 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-8 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-8 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-8 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-8 div.sk-item {position: relative;z-index: 1;}#sk-container-id-8 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-8 div.sk-item::before, #sk-container-id-8 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-8 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-8 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-8 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-8 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-8 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-8 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-8 div.sk-label-container {text-align: center;}#sk-container-id-8 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-8 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-8\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-8\" type=\"checkbox\" checked><label for=\"sk-estimator-id-8\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 134
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -811,9 +786,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_ecpSeEuTQIA",
-        "outputId": "c96fc534-dd60-4d1a-f6a0-b417bbf0e65e"
+        "outputId": "e5509bbd-5c02-4898-8dff-280c7c13b0bd"
       },
-      "execution_count": 135,
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +798,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 135
+          "execution_count": 160
         }
       ]
     },
@@ -838,9 +813,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jgtF2UusT8FG",
-        "outputId": "894a67af-38e6-40ec-a704-27fbe53b6072"
+        "outputId": "028ad55e-96c4-4c2a-dcaa-861f59e68155"
       },
-      "execution_count": 136,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -856,20 +831,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 136
+          "execution_count": 164
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "iris['pred']=pred\n",
-        "iris['species']=iris['pred'].map({0:'Setosa',1:'versicolor',2:'virginica'})\n"
+        "iris['species']=pred\n",
+        "iris['species']=iris['species'].map({0:'Setosa',1:'versicolor',2:'virginica'})"
       ],
       "metadata": {
         "id": "Vuu7ryI9l9uu"
       },
-      "execution_count": 141,
+      "execution_count": 167,
       "outputs": []
     },
     {
@@ -878,13 +853,13 @@
         "iris['species']"
       ],
       "metadata": {
-        "id": "Wp7dueynmjiM",
-        "outputId": "b60ba3d9-5da2-4a92-c764-d678254b3c9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wp7dueynmjiM",
+        "outputId": "1323037a-2e8c-4f82-a797-a2167a8fbe64"
       },
-      "execution_count": 147,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,23 +880,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 147
+          "execution_count": 168
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#predicted result\n",
         "iris['species'].value_counts()"
       ],
       "metadata": {
-        "id": "vXyZJkG-nOg0",
-        "outputId": "cc85e76e-a838-4b8a-ccaa-0ce466e7b58d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vXyZJkG-nOg0",
+        "outputId": "3f47f90c-94f2-40f0-fce3-8e169756fdd4"
       },
-      "execution_count": 143,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,7 +910,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 143
+          "execution_count": 170
         }
       ]
     },
@@ -942,14 +918,14 @@
       "cell_type": "code",
       "source": [
         "from sklearn import metrics\n",
-        "print(metrics.classification_report(y, pred))\n"
+        "print(metrics.classification_report(y, pred))"
       ],
       "metadata": {
-        "id": "Wz4Ec8hskM8b",
-        "outputId": "b7c60ce5-6bca-4e27-92a4-78fb3b5623cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wz4Ec8hskM8b",
+        "outputId": "b7c60ce5-6bca-4e27-92a4-78fb3b5623cb"
       },
       "execution_count": 112,
       "outputs": [
@@ -974,14 +950,14 @@
     {
       "cell_type": "code",
       "source": [
-        "print(metrics.confusion_matrix(y, pred))\n"
+        "print(metrics.confusion_matrix(y, pred))"
       ],
       "metadata": {
-        "id": "4Tl8YLFboLUv",
-        "outputId": "4be7c700-2863-4a53-ca70-aabf6e9a768f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4Tl8YLFboLUv",
+        "outputId": "4be7c700-2863-4a53-ca70-aabf6e9a768f"
       },
       "execution_count": 145,
       "outputs": [
